--- a/services/repository.html
+++ b/services/repository.html
@@ -11,7 +11,7 @@
   gtag('config', 'G-ZM4LK5K0LJ');
 </script>
     <link rel="stylesheet" href="style.css">
-    <title>About</title>
+    <title>Dépôt</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
@@ -509,23 +509,23 @@ ul.breadcrumb li a:hover {
 <body>
   <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">JstMStudio</div>
+        <div class="logo_name">Jst polyvalent lieu de travail</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
         <a href="home.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Accueil</span>
       </li>
       <li>
        <a href="about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos</span>
      </li>
      <li>
      <li>
@@ -537,11 +537,11 @@ ul.breadcrumb li a:hover {
      </li>
      <li>
      <li>
-       <a href="project.html">
+       <a href="projet.html">
          <i class='bx bxs-briefcase-alt-2'></i>
-         <span class="links_name">Project</span>
+         <span class="links_name">Projet</span>
        </a>
-       <span class="tooltip">Project</span>
+       <span class="tooltip">Projet</span>
      </li>
      <li>
        <a href="client.html">
@@ -553,9 +553,9 @@ ul.breadcrumb li a:hover {
      <li>
        <a href="web-app.html">
         <i class='bx bx-log-in'></i>
-         <span class="links_name">Web App</span>
+         <span class="links_name">Application Web</span>
        </a>
-       <span class="tooltip">Web App</span>
+       <span class="tooltip">Application Web</span>
      </li>
       <li>
        <a href="api.html">
@@ -567,9 +567,9 @@ ul.breadcrumb li a:hover {
      <li>
        <a href="store.html">
          <i class='bx bx-store-alt'></i>
-         <span class="links_name">Store</span>
+         <span class="links_name">Magasin</span>
        </a>
-       <span class="tooltip">Store</span>
+       <span class="tooltip">Magasin</span>
      </li>
      <li>
     </ul>
@@ -580,10 +580,10 @@ ul.breadcrumb li a:hover {
 <div id="myNav" class="overlay">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="overlay-content">
-<h1>Repositories</h1>
-<p>Welcome to repository directory of JstMStudio! A directory listing of all repositories in JstMStudio Repository. A place to discover for amazing repository in JstMStudio Repository by awesome developers communities.</p><br>
+<h1>Référentiels</h1>
+<p>Bienvenue dans le répertoire de dépôt de JstMStudio ! Une liste de répertoires de tous les référentiels dans le référentiel JstMStudio. Un endroit à découvrir pour un référentiel incroyable dans JstMStudio Repository par d'impressionnantes communautés de développeurs.</p><br>
 
-<input type="text" id="myInput10" onkeyup="myFunction10()" placeholder="Search for repository names.." title="Type in a name">
+<input type="text" id="myInput10" onkeyup="myFunction10()" placeholder="Rechercher des noms de référentiel.." title="Saisir un nom">
 
 <ul id="myUL1">
   <li><a href="#">NoneA</a></li>
@@ -614,24 +614,24 @@ function myFunction10() {
 <div id="myNav1" class="overlay">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav1()">&times;</a>
   <div class="overlay-content">
-<h1>Create Repository</h1>
-<p><strong>We provide multiple methods for everyone to start and create their repository on JstMStudio. Users could choose one methods for all methods provided here to start and create a repository.</strong></p>
+<h1>Créer un référentiel</h1>
+<p><strong>Nous proposons plusieurs méthodes permettant à chacun de démarrer et de créer son référentiel sur JstMStudio. Les utilisateurs peuvent choisir une méthode pour toutes les méthodes fournies ici pour démarrer et créer un référentiel.</strong></p>
 <br>
-<hr>
+<h>
 <br>
-<h2>Methods</h2>
+<h2>Méthodes</h2>
 <br>
-<button type="button" class="collapsible1">Create Github Issues</button>
+<button type="button" class="collapsible1">Créer des problèmes Github</button>
 <div class="content2">
-  <p>You could create a issue in our <a href="https://github.com/One-Future-Unified-Team/Documentation/issues">Documentation repository</a> on JstMStudio Github organization. You could create an issue stating all information about your repository and etc so a volunteer could stand in and create the repository for you. </p>
+  <p>Vous pouvez créer un problème dans notre <a href="https://github.com/One-Future-Unified-Team/Documentation/issues">dépôt de documentation</a> sur l'organisation JstMStudio Github. Vous pouvez créer un problème indiquant toutes les informations sur votre référentiel, etc., afin qu'un volontaire puisse intervenir et créer le référentiel pour vous. </p>
 </div>
-<button type="button" class="collapsible1">Create Ticket</button>
+<button type="button" class="collapsible1">Créer un ticket</button>
 <div class="content2">
-    <p>You could create a repository by creating a ticket to contact us. You could contact us and tell us information that you want in your repository so JstMStudio staff could create a repository for you. This will only work during JstMStudio staff business hours. You could create a ticket on our Discord/Support Desk. </p>
+    <p>Vous pouvez créer un référentiel en créant un ticket pour nous contacter. Vous pouvez nous contacter et nous indiquer les informations que vous souhaitez dans votre référentiel afin que le personnel de JstMStudio puisse créer un référentiel pour vous. Cela ne fonctionnera que pendant les heures d'ouverture du personnel de JstMStudio. Vous pouvez créer un ticket sur notre Discord/Support Desk. </p>
 </div>
-<button type="button" class="collapsible1">Google Form</button>
+<button type="button" class="collapsible1">Formulaire Google</button>
 <div class="content2">
-  <p>That not all, you could also fill up JstMStudio repository Google Form. You could fill up the Google Form with all information in the fields needed. Once you finish filling up, submit the form to JstMStudio and wait for a repository creator or OFUT staff to create a repository for you, which usually took a few hours to days.</p>
+  <p>Ce n'est pas tout, vous pouvez également remplir le formulaire Google du référentiel JstMStudio. Vous pouvez remplir le formulaire Google avec toutes les informations dans les champs nécessaires. Une fois que vous avez terminé de remplir, soumettez le formulaire à JstMStudio et attendez qu'un créateur de référentiel ou le personnel de l'OFUT crée un référentiel pour vous, ce qui prenait généralement de quelques heures à quelques jours.</p>
 </div>
 
 <script>
@@ -653,22 +653,22 @@ for (i = 0; i < coll.length; i++) {
   </div>
 </div>
 <ul class="breadcrumb">
-  <li><a href="/home.html">Website</a></li>
-  <li><a href="/web-app.html">Web App</a></li>
-  <li><a href="">Services</a></li>
-  <li>Repository</li>
+<li><a href="/home.html">Site Web</a></li>
+   <li><a href="/web-app.html">Application Web</a></li>
+   <li><a href="">Services</a></li>
+   <li>Répertoire</li>
 </ul>
 <br>
-      <h1>Repository</h1>
-      <p>Welcome to JstMStudio repository! A place to find, read, view and study source codes from open source websites uploaded by their respective developer.</p>
-      <br>
-      <p>JstMStudio repository is totally free for everyone! Users could view and upload source codes of open source software in JstMStudio repository for totally free with no hidden fees or ads.</p>
-      <br>
-      <p>JstMStudio repository itself is totally open source. Everyone could view, study and read JstMStudio repository source codes.</p>
+ <h1>Répertoire</h1>
+       <p>Bienvenue dans le référentiel JstMStudio ! Un endroit pour trouver, lire, afficher et étudier les codes sources des sites Web open source téléchargés par leur développeur respectif.</p>
+       <br>
+       <p>Le référentiel JstMStudio est totalement gratuit pour tout le monde ! Les utilisateurs peuvent afficher et télécharger les codes sources des logiciels open source dans le référentiel JstMStudio gratuitement, sans frais ni publicité cachés.</p>
+       <br>
+       <p>Le référentiel JstMStudio lui-même est totalement open source. Tout le monde pouvait voir, étudier et lire les codes sources du référentiel JstMStudio.</p>
 <br>
-<div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight: bold;border-style: solid;" onclick="openNav()" id="repositories">Repositories</div>
+<div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight:bold;border-style:solid;" onclick="openNav()" id="dépôts">Dépôts</div>
 <br>
-<div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight: bold;border-style: solid;" onclick="openNav1()" id="createrepository">Create Repository</div>
+<div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight:bold;border-style:solid;" onclick="openNav1()" id="createrepository">Créer un référentiel</div>
 <br>
 <script>
 function openNav() {
@@ -690,8 +690,9 @@ function closeNav1() {
 <br><br>
   <hr>
   <br>
-  <h1>Themes</h1>
-<p>You could customise the themes of JstMStudio into a colour that you prefer. Select and choose from the color set below to make JstMStudio UI into your color preference.</p>
+<h1>Thèmes</h1>
+<p>Vous pouvez personnaliser les thèmes de Jst polyvalent lieu de travail dans une couleur que vous préférez. Sélectionnez et choisissez parmi le jeu de couleurs ci-dessous pour faire de l'interface utilisateur de Jst polyvalent lieu de travail votre préférence de couleur.</p>
+
 <br>
 <div style="float:left;text-align:center;padding:10px;">
 <button onclick="myFunction()" style="background-color: black;" class="button2"></button>
