--- a/services/discoserver.html
+++ b/services/discoserver.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Discoserver</title>
+    <title>Discoserveur</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
@@ -773,23 +773,23 @@ text-align: center;
 <body>
 <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">JstMStudio</div>
+        <div class="logo_name">Jst polyvalent lieu de travail</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
         <a href="home.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Accueil</span>
       </li>
       <li>
        <a href="about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos</span>
      </li>
      <li>
      <li>
@@ -801,11 +801,11 @@ text-align: center;
      </li>
      <li>
      <li>
-       <a href="project.html">
+       <a href="projet.html">
          <i class='bx bxs-briefcase-alt-2'></i>
-         <span class="links_name">Project</span>
+         <span class="links_name">Projet</span>
        </a>
-       <span class="tooltip">Project</span>
+       <span class="tooltip">Projet</span>
      </li>
      <li>
        <a href="client.html">
@@ -817,9 +817,9 @@ text-align: center;
      <li>
        <a href="web-app.html">
         <i class='bx bx-log-in'></i>
-         <span class="links_name">Web App</span>
+         <span class="links_name">Application Web</span>
        </a>
-       <span class="tooltip">Web App</span>
+       <span class="tooltip">Application Web</span>
      </li>
       <li>
        <a href="api.html">
@@ -831,57 +831,57 @@ text-align: center;
      <li>
        <a href="store.html">
          <i class='bx bx-store-alt'></i>
-         <span class="links_name">Store</span>
+         <span class="links_name">Magasin</span>
        </a>
-       <span class="tooltip">Store</span>
+       <span class="tooltip">Magasin</span>
      </li>
      <li>
     </ul>
   </div>
   <section class="home-section">
 <ul class="breadcrumb">
-  <li><a href="/home.html">Website</a></li>
-  <li><a href="/web-app.html">Web App</a></li>
+  <li><a href="/home.html">Site Web</a></li>
+  <li><a href="/web-app.html">Application Web</a></li>
   <li><a href="">Services</a></li>
-  <li>Discoserver</li>
+  <li>Discoserveur</li>
 </ul>
 <br>
-<div style="margin-top:15px;text-align: center;padding:16px;">
-        <h1>Discoserver</h1>
-  <p>Discoserver is a free library of servers chat across multiple platforms. Discoserver have servers on Discord, Guilded and Revolt on our website for everyone to view all servers and bots in Discoserver for free of charge. We also have listings of Guilded, Discord and Revolt bots developed by the communities. We also have listing of themes in Revolt too! Users could add unlimited servers/bots/themes into Discoserver library too for free with no fees needed. </p>
+<div style="margin-top:15px;text-align : center;padding:16px;">
+        <h1>Discoserveur</h1>
+  <p>Discoserver est une bibliothèque gratuite de serveurs de discussion sur plusieurs plates-formes. Discoserver a des serveurs sur Discord, Guilded et Revolt sur notre site Web pour que tout le monde puisse voir gratuitement tous les serveurs et bots de Discoserver. Nous avons également des listes de bots Guilded, Discord et Revolt développés par les communautés. Nous avons également une liste de thèmes dans Revolt aussi ! Les utilisateurs peuvent également ajouter un nombre illimité de serveurs/bots/thèmes dans la bibliothèque Discoserver gratuitement et sans frais. </p>
   <br>
-  <p>Discoserver is an open source software (OSS)! Discoserver source code is publicly available to everyone under MIT licenses. Everyone could view, study and read all of our source code anytime, anyday in the year.</p>
+  <p>Discoserver est un logiciel open source (OSS) ! Le code source de Discoserver est publiquement accessible à tous sous licences MIT. Tout le monde pouvait voir, étudier et lire tout notre code source à tout moment, n'importe quel jour de l'année.</p>
   <br><br>
 <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'Discord')" id="defaultOpen">Discord</button>
-  <button class="tablinks" onclick="openCity(event, 'Guilded')">Guilded</button>
-  <button class="tablinks" onclick="openCity(event, 'Revolt')">Revolt</button>
+  <button class="tablinks" onclick="openCity(event, 'Guilded')">Guildé</button>
+  <button class="tablinks" onclick="openCity(event, 'Revolt')">Révolte</button>
 </div>
 
 <div id="Discord" class="tabcontent">
-<h1>Discord</h1>
-  <p>Welcome to Discord section of Discoserver! A place to explore and find a tons of Discord bots and community server. A place to explore for more communities that you never heard of. </p> 
-  <br> 
-  <button type="button" class="collapsible">Servers</button>
+<h1>Discordance</h1>
+  <p>Bienvenue dans la section Discord de Discoserver ! Un endroit pour explorer et trouver une tonne de robots Discord et de serveurs communautaires. Un endroit à explorer pour plus de communautés dont vous n'avez jamais entendu parler. </p>
+  <br>
+  <button type="button" class="collapsible">Serveurs</button>
 <div class="content1">
-<p>We connect users and server together to form an active community server. A place where users meet a server with the niche they likes or want.</p><br>
-<input type="text" id="myInput" onkeyup="myFunction11()" placeholder="Search for server name.." title="Type in a name" style="background-color:blue;color:orange;">
+<p>Nous connectons les utilisateurs et le serveur ensemble pour former un serveur communautaire actif. Un endroit où les utilisateurs rencontrent un serveur avec le créneau qu'ils aiment ou veulent.</p><br>
+<input type="text" id="myInput" onkeyup="myFunction11()" placeholder="Rechercher le nom du serveur.." title="Tapez un nom" style="background-color:blue;color:orange; ">
 
 <ul id="myUL">
-  <li><div><a href="#">Nonea</a>a</div></li>
-  <li><div><a href="#">Noneb</a>a</div></li>
-  <li><div><a href="#">Nonec</a>a</div></li>
+  <li><div><a href="#">Aucun</a>a</div></li>
+  <li><div><a href="#">Aucunb</a>a</div></li>
+  <li><div><a href="#">Aucun</a>a</div></li>
 </ul>
 </div>
   <button type="button" class="collapsible" style="margin-top:16px;">Bots</button>
 <div class="content1">
-<p>Discover awesome bots developed and programmed by the Discord community developers. A listing of all cool bots with many amazing commands tools that you could use for your server.</p><br>
-<input type="text" id="myInput2" onkeyup="myFunction12()" placeholder="Search for server name.." title="Type in a name" style="background:blue;color:orange;">
+<p>Découvrez des bots géniaux développés et programmés par les développeurs de la communauté Discord. Une liste de tous les robots sympas avec de nombreux outils de commandes incroyables que vous pourriez utiliser pour votre serveur.</p><br>
+<input type="text" id="myInput2" onkeyup="myFunction12()" placeholder="Rechercher le nom du serveur.." title="Tapez un nom" style="background:blue;color:orange;">
 
 <ul id="myUL2">
-  <li><div><a href="#">Nonea</a>a</div></li>
-  <li><div><a href="#">Noneb</a>a</div></li>
-  <li><div><a href="#">Nonec</a>a</div></li>
+  <li><div><a href="#">Aucun</a>a</div></li>
+  <li><div><a href="#">Aucunb</a>a</div></li>
+  <li><div><a href="#">Aucun</a>a</div></li>
 </ul>
 <script>
 var coll = document.getElementsByClassName("collapsible");
@@ -937,29 +937,29 @@ function myFunction12() {
 </div>
 
 <div id="Guilded" class="tabcontent">
-<h1>Guilded</h1>
-  <p>Welcome to Guilded section of Discoserver! A place to explore and find a tons of Guilded bots and community server. A place to explore for more communities that you never heard of. </p> 
+<h1>Guildé</h1>
+  <p>Bienvenue dans la section Guilded de Discoserver ! Un endroit pour explorer et trouver des tonnes de bots Guilded et de serveurs communautaires. Un endroit à explorer pour plus de communautés dont vous n'avez jamais entendu parler. </p>
   <br>
-  <button type="button" class="collapsible">Servers</button>
+  <button type="button" class="collapsible">Serveurs</button>
 <div class="content1">
-<p>We connect users and server together to form an active community server. A place where users meet a server with the niche they likes or want.</p><br>
-<input type="text" id="myInput3" onkeyup="myFunction13()" placeholder="Search for server name.." title="Type in a name" style="background-color:blue;color:orange;">
+<p>Nous connectons les utilisateurs et le serveur ensemble pour former un serveur communautaire actif. Un endroit où les utilisateurs rencontrent un serveur avec le créneau qu'ils aiment ou veulent.</p><br>
+<input type="text" id="myInput3" onkeyup="myFunction13()" placeholder="Rechercher le nom du serveur.." title="Tapez un nom" style="background-color:blue;color:orange; ">
 
 <ul id="myUL3">
-  <li><div><a href="#">Nonea</a>a</div></li>
-  <li><div><a href="#">Noneb</a>a</div></li>
-  <li><div><a href="#">Nonec</a>a</div></li>
+  <li><div><a href="#">Aucun</a>a</div></li>
+  <li><div><a href="#">Aucunb</a>a</div></li>
+  <li><div><a href="#">Aucun</a>a</div></li>
 </ul>
 </div>
   <button type="button" class="collapsible" style="margin-top:16px;">Bots</button>
 <div class="content1">
-<p>Discover awesome bots developed and programmed by the Guilded community developers. A listing of all cool bots with many amazing commands tools that you could use for your server.</p><br>
-<input type="text" id="myInput4" onkeyup="myFunction14()" placeholder="Search for bots name.." title="Type in a name" style="background:blue;color:orange;">
+<p>Découvrez des bots géniaux développés et programmés par les développeurs de la communauté Guilded. Une liste de tous les robots sympas avec de nombreux outils de commandes incroyables que vous pourriez utiliser pour votre serveur.</p><br>
+<input type="text" id="myInput4" onkeyup="myFunction14()" placeholder="Rechercher le nom du bot.." title="Tapez un nom" style="background:blue;color:orange;">
 
 <ul id="myUL4">
-  <li><div><a href="#">Nonea</a>a</div></li>
-  <li><div><a href="#">Noneb</a>a</div></li>
-  <li><div><a href="#">Nonec</a>a</div></li>
+  <li><div><a href="#">Aucun</a>a</div></li>
+  <li><div><a href="#">Aucunb</a>a</div></li>
+  <li><div><a href="#">Aucun</a>a</div></li>
 </ul>
 <script>
 var coll = document.getElementsByClassName("collapsible");
@@ -1015,41 +1015,41 @@ function myFunction14() {
 </div>
 
 <div id="Revolt" class="tabcontent">
-<h1>Revolt</h1>
-  <p>Welcome to Revolt section of Discoserver! A place to explore and find a tons of Revolt bots, themes and community server. A place to explore for more communities that you never heard of. </p> 
+<h1>Révolte</h1>
+  <p>Bienvenue dans la section Revolt de Discoserver ! Un endroit pour explorer et trouver une tonne de robots, de thèmes et de serveurs communautaires Revolt. Un endroit à explorer pour plus de communautés dont vous n'avez jamais entendu parler. </p>
   <br>
-  <button type="button" class="collapsible">Servers</button>
+  <button type="button" class="collapsible">Serveurs</button>
 <div class="content1">
-<p>We connect users and server together to form an active community server. A place where users meet a server with the niche they likes or want.</p><br>
-<input type="text" id="myInput5" onkeyup="myFunction5()" placeholder="Search for server name.." title="Type in a name" style="background-color:blue;color:orange;">
+<p>Nous connectons les utilisateurs et le serveur ensemble pour former un serveur communautaire actif. Un endroit où les utilisateurs rencontrent un serveur avec le créneau qu'ils aiment ou veulent.</p><br>
+<input type="text" id="myInput5" onkeyup="myFunction5()" placeholder="Rechercher le nom du serveur.." title="Tapez un nom" style="background-color:blue;color:orange; ">
 
 <ul id="myUL5">
-  <li><div><a href="#">Nonea</a>a</div></li>
-  <li><div><a href="#">Noneb</a>a</div></li>
-  <li><div><a href="#">Nonec</a>a</div></li>
+  <li><div><a href="#">Aucun</a>a</div></li>
+  <li><div><a href="#">Aucunb</a>a</div></li>
+  <li><div><a href="#">Aucun</a>a</div></li>
 </ul>
 </div>
 
   <button type="button" class="collapsible" style="margin-top:16px;">Bots</button>
 <div class="content1">
-<p>Discover awesome bots developed and programmed by the Revolt community developers. A listing of all cool bots with many amazing commands tools that you could use for your server.</p><br>
-<input type="text" id="myInput6" onkeyup="myFunction6()" placeholder="Search for bots name.." title="Type in a name" style="background:blue;color:orange;">
+<p>Découvrez des bots géniaux développés et programmés par les développeurs de la communauté Revolt. Une liste de tous les robots sympas avec de nombreux outils de commandes incroyables que vous pourriez utiliser pour votre serveur.</p><br>
+<input type="text" id="myInput6" onkeyup="myFunction6()" placeholder="Rechercher le nom du bot.." title="Tapez un nom" style="background:blue;color:orange;">
 
 <ul id="myUL6">
-  <li><div><a href="#">Nonea</a>a</div></li>
-  <li><div><a href="#">Noneb</a>a</div></li>
-  <li><div><a href="#">Nonec</a>a</div></li>
+  <li><div><a href="#">Aucun</a>a</div></li>
+  <li><div><a href="#">Aucunb</a>a</div></li>
+  <li><div><a href="#">Aucun</a>a</div></li>
 </ul>
 </div>
 
-  <button type="button" class="collapsible" style="margin-top:16px;">Themes</button>
+  <button type="button" class="collapsible" style="margin-top:16px;">Thèmes</button>
 <div class="content1">
-<input type="text" id="myInput7" onkeyup="myFunction7()" placeholder="Search for theme name.." title="Type in a name" style="background:blue;color:orange;">
+<input type="text" id="myInput7" onkeyup="myFunction7()" placeholder="Rechercher le nom du thème.." title="Tapez un nom" style="background:blue;color:orange;">
 
 <ul id="myUL7">
-  <li><div><a href="#">Nonea</a>a</div></li>
-  <li><div><a href="#">Noneb</a>a</div></li>
-  <li><div><a href="#">Nonec</a>a</div></li>
+  <li><div><a href="#">Aucun</a>a</div></li>
+  <li><div><a href="#">Aucunb</a>a</div></li>
+  <li><div><a href="#">Aucun</a>a</div></li>
 </ul>
 </div>
 <script>
@@ -1145,8 +1145,8 @@ document.getElementById("defaultOpen").click();
 <hr>
   <br>
   <div style="padding:16px;">
-  <h1>Themes</h1>
-<p>You could customise the themes of JstMStudio into a colour that you prefer. Select and choose from the color set below to make JstMStudio UI into your color preference.</p>
+<h1>Thèmes</h1>
+<p>Vous pouvez personnaliser les thèmes de Jst polyvalent lieu de travail dans une couleur que vous préférez. Sélectionnez et choisissez parmi le jeu de couleurs ci-dessous pour faire de l'interface utilisateur de Jst polyvalent lieu de travail votre préférence de couleur.</p>
 <br>
 <div style="float:left;text-align:center;padding:10px;">
 <button onclick="myFunction()" style="background-color: black;" class="button2"></button>
