--- a/services/news.html
+++ b/services/news.html
@@ -519,6 +519,15 @@ background-color: black;
         <p style="text-align:center;">Example</p>
     </div>
     <br><br>
+<hr>
+<br>
+<h2>Abonnez-vous à la newsletter Jst polyvalent lieu de travail</h2>
+     <p>Jst polyvalent lieu de travail News exploite actuellement une newsletter pour les nouvelles du monde entier, de l'Asie à l'Afrique en passant par le continent nord-américain, nous diffusons des nouvelles du monde entier. Peu importe s'il s'agit de nouvelles de n'importe où avec une quelconque censure, nous les diffuserons à tout notre public. Nous espérons que vous pourrez nous soutenir en vous inscrivant à notre newsletter pour recevoir les dernières nouvelles du monde entier. C'est aussi un gagnant-gagnant puisque vous recevrez des nouvelles filtrées directement à partir de votre boîte aux lettres. Abonnez-vous à notre newsletter sur Substack dès aujourd'hui.</p>
+    <br>
+    <div style="color:red;">
+    <iframe src="https://jstmstudionews.substack.com/embed" width="400" height="250" style="border:5px solid purple;background:transparent;color:red;" frameborder="0" scrolling="no"></iframe>
+    </div>
+    <br><br>
   <hr>
   <br>
 <h1>Thèmes</h1>
