--- a/web-app.html
+++ b/web-app.html
@@ -532,6 +532,8 @@ padding-right: 20px;
 <br>
 <div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight: bold;border-style: solid;"> <a href="services/code-editor.html">Éditeur de code</a></div>
 <br>
+<div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight: bold;border-style: solid;"><a href="services/community.html">Communauté</a></div>
+<br>
 <div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight: bold;border-style: solid;"> <a href="services/compass.html">Compas</a></div>
 <br>
 <div style="font-size:30px;background-color:cyan;width:90%;text-align:center;color:purple;padding:10px;font-weight: bold;border-style: solid;"> <a href="services/contact.html">Contact</a></div>
